<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".UpgradeAppActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/background_screen"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/indigo_dark"
            android:paddingHorizontal="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_arrow_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp"
                android:paddingHorizontal="20dp"
                android:text="@string/upgrade_applock"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/iv_arrow_back"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ads_are_now_bye_bye"
                    android:textColor="@color/white" />

                <TextView
                    style="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/want_to_use_applock_more_easily_go_i_m_upgrading_right_now_and_i_m_not_with_ads_anymore"
                    android:textColor="@color/white" />

                <TextView
                    style="@style/TextAppearance.Material3.HeadlineMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/say_hello"
                    android:textColor="@color/white" />
            </LinearLayout>

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                app:adSize="MEDIUM_RECTANGLE"
                app:adUnitId="@string/ad_unit_id_3"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            style="@style/TextAppearance.Material3.TitleLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_8_900_1_year"
                            android:textColor="@color/white" />

                        <TextView
                            style="@style/TextAppearance.Material3.BodyLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yearly_billing"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_green_rounded_10"
                        android:text="@string/purchase"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            style="@style/TextAppearance.Material3.TitleLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_3_700_3_months"
                            android:textColor="@color/white" />

                        <TextView
                            style="@style/TextAppearance.Material3.BodyLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quarterly_billing"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_green_rounded_10"
                        android:text="@string/purchase"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="10dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            style="@style/TextAppearance.Material3.TitleLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_2_500_1_month"
                            android:textColor="@color/white" />

                        <TextView
                            style="@style/TextAppearance.Material3.BodyLarge"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/monthly_billing"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/background_green_rounded_10"
                        android:text="@string/purchase"
                        android:textColor="@color/black"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>