<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MultiLanguageBottomSheet">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/standard_bottom_sheet"
            style="@style/Widget.Material3.BottomSheet"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Drag handle for accessibility -->
            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:id="@+id/drag_handle"
                android:tintMode="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:gravity="center"
                android:paddingHorizontal="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:id="@+id/iv_close"
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_close"/>
                <TextView
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_language"/>
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:padding="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioGroup
                        android:id="@+id/radioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <RadioButton
                            android:id="@+id/rb_hindi"
                            android:paddingHorizontal="20dp"
                            style="@style/TextAppearance.Material3.BodyLarge"                            android:theme="@style/MyRadioButton"
                            android:enabled="false"
                            android:textColor="@color/white"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                            android:text="@string/hindi"/>
                        <RadioButton
                            android:id="@+id/rb_english"
                            android:theme="@style/MyRadioButton"
                            android:layout_marginBottom="10dp"
                            android:textColor="@color/white"
                            style="@style/TextAppearance.Material3.BodyLarge"                            android:paddingHorizontal="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/english"/>
                        <RadioButton
                            android:id="@+id/rb_korean"
                            android:theme="@style/MyRadioButton"
                            android:layout_marginBottom="10dp"
                            android:textColor="@color/white"
                            style="@style/TextAppearance.Material3.BodyLarge"                            android:paddingHorizontal="20dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/korean"/>
                        <RadioButton
                            android:id="@+id/rb_russian"
                            android:theme="@style/MyRadioButton"
                            android:layout_marginBottom="10dp"
                            style="@style/TextAppearance.Material3.BodyLarge"
                            android:paddingHorizontal="20dp"
                            android:textColor="@color/white"
                            android:enabled="false"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/russian"/>
                        <RadioButton
                            android:id="@+id/rb_spanish"
                            android:enabled="false"
                            android:theme="@style/MyRadioButton"
                            style="@style/TextAppearance.Material3.BodyLarge"
                            android:paddingHorizontal="20dp"
                            android:textColor="@color/white"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:text="@string/spanish"/>
                    </RadioGroup>


                </LinearLayout>

            </androidx.core.widget.NestedScrollView>


        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>